--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,442 @@
-/* место для вашего кода */
+.body {
+  background-color: #fff;
+  font-family: 'Raleway', 'Verdana', sans-serif;
+}
+
+.header {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  grid-template-rows: 1fr;
+  padding: 92px 49px 92px 51px;
+  max-width: 1440px;
+  width: 100%;
+  margin: auto;
+}
+
+.header__links-list {
+  color: #000;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: normal;
+  display: flex;
+  flex-direction: row;
+  gap: 32px;
+  grid-column: 1/2;
+  padding-top: 43px;
+  padding-bottom: 45px;
+}
+
+.header__links-list-item {
+  list-style-type: circle;
+  color: #000;
+  white-space: nowrap;
+}
+
+.header__links-list-item_no-bullit {
+  list-style-type: none;
+}
+
+.header__link {
+  text-underline-offset: 5px;
+}
+
+.header__link_active {
+  text-decoration: none;
+}
+
+.header__logo {
+  grid-column: 2/3;
+  display: block;
+  width: 148px;
+  height: 105px;
+}
+
+.header__logo-image {
+  height: 100%;
+  width: 100%;
+}
+
+.address {
+  max-width: 240px;
+  color: #000;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 1.35;
+}
+
+.header__address {
+  grid-column: 3/4;
+  align-self: center;
+  justify-self: end;
+}
+
+.header__address-tel,
+.header__address-mail {
+  text-underline-offset: 4px;
+}
+
+.content {
+  max-width: 1440px;
+  width: 100%;
+  margin: auto;
+}
+
+.cover {
+  position: relative;
+  background: url(../images/cover.jpg) 100% 100% no-repeat;
+  background-size: cover;
+  padding: 165px 50px 50px;
+  z-index: -2;
+}
+
+.overlay {
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.5);
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+}
+
+.cover__title {
+  color: #fff;
+  font-size: 100px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.aligned-text {
+  display: block;
+  line-height: 1.15;
+  letter-spacing: 30px;
+  margin-bottom: 20px;
+}
+
+.aligned-text .letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.aligned-text .no-letter-spacing {
+  letter-spacing: 0px;
+}
+
+.aligned-text_center {
+  display: block;
+  text-align: center;
+  line-height: 1;
+  letter-spacing: 30px;
+  margin-bottom: 20px;
+}
+
+.aligned-text_center .letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.aligned-text_center .no-letter-spacing {
+  letter-spacing: 0px;
+}
+
+.aligned-text_right {
+  display: block;
+  text-align: right;
+  line-height: 1;
+  letter-spacing: 30px;
+  margin-bottom: 135px;
+}
+
+.aligned-text_right .letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.aligned-text_right .no-letter-spacing {
+  letter-spacing: 0px;
+}
+
+.cover__description {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 78px;
+  color: #fff;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 28px;
+  text-transform: uppercase;
+}
+
+.cover__description-text {
+  word-spacing: 24px;
+  color: #fff;
+  font-size: 22px;
+  font-weight: 400;
+}
+
+.cover__description-text .word-spacing-extended {
+  word-spacing: 17px;
+}
+
+.bet-button {
+  padding: 12px 32px;
+  background-color: transparent;
+  border: 1px solid #fff;
+  color: #fff;
+  font-family: Raleway;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  text-decoration: none;
+  white-space: nowrap;
+}
+
+.lots {
+  padding: 180px 50px;
+  display: flex;
+  flex-direction: column;
+}
+
+.lots__heading {
+  display: flex;
+  color: #000;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+  margin: auto auto 27px 40px;
+}
+
+.lots__card-list {
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 1;
+  gap: 25px;
+  list-style-type: none;
+  margin-bottom: 30px;
+}
+
+.card {
+  flex-basis: 430px;
+  min-height: 450px;
+  flex-grow: 1;
+  display: flex;
+  width: 100%;
+}
+
+.card-link {
+  text-decoration: none;
+  display: block;
+  width: 100%;
+}
+
+.card_type_film {
+  position: relative;
+  background: url(../images/card-lot-01.jpg) 100% 100% no-repeat;
+  background-size: cover;
+  z-index: -2;
+  height: 100%;
+  width: 100%;
+}
+
+.card_type_film .card__title {
+  color: #fff;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 1.2;
+  text-decoration-line: underline;
+  text-transform: uppercase;
+}
+
+.card_type_film .card__content {
+  padding: 50px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+}
+
+.card_type_film .card__text {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.2;
+}
+
+.card_type_book {
+  position: relative;
+  background: url(../images/card-lot-02.jpg) 100% 100% no-repeat;
+  background-size: cover;
+  z-index: -2;
+  height: 100%;
+  width: 100%;
+}
+
+.card_type_book .card__content {
+  padding: 50px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+}
+
+.card_type_book .card__title {
+  color: #fff;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 1.2;
+  text-decoration-line: underline;
+  text-transform: uppercase;
+}
+
+.card_type_book .card__text {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.2;
+}
+
+.card_type_picture {
+  position: relative;
+  background: url(../images/card-lot-03.jpg) 100% 100% no-repeat;
+  background-size: cover;
+  z-index: -2;
+  height: 100%;
+  width: 100%;
+}
+
+.card_type_picture .card__content {
+  padding: 50px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  width: 100%;
+}
+
+.card_type_picture .card__title {
+  color: #fff;
+  font-size: 22px;
+  font-weight: 700;
+  line-height: 1.2;
+  text-decoration-line: underline;
+  text-transform: uppercase;
+}
+
+.card_type_picture .card__text {
+  color: #fff;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 1.2;
+}
+
+.lots__look-more-link {
+  color: #000;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  margin: auto auto 2px 40px;
+}
+
+.about {
+  padding: 0 50px 180px;
+  display: grid;
+  grid-template-columns: 430px 1fr;
+  grid-template-rows: 1fr;
+  gap: 25px;
+}
+
+.about__column-logo {
+  display: flex;
+  align-items: start;
+  justify-content: center;
+}
+
+.about__logo {
+  display: flex;
+  background-color: #000;
+  width: 240px;
+  height: 240px;
+  border: 1px solid #000;
+  border-radius: 50%;
+  justify-content: center;
+  align-items: center;
+}
+
+.about__logo-image {
+  width: 148px;
+  height: 114px;
+}
+
+.about__column-text {
+  padding-top: 100px;
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+}
+
+.about__title {
+  color: #000;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  color: #000;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: normal;
+}
+
+.footer {
+  padding: 0px 50px 90px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  max-width: 1440px;
+  width: 100%;
+  margin: auto;
+}
+
+.footer__address-tel,
+.footer__address-mail {
+  text-underline-offset: 4px;
+}
+
+.footer__menu-list {
+  list-style-type: none;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer__menu-link_active {
+  text-decoration: none;
+}
+
+.footer__menu-link {
+  color: #000;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: normal;
+  text-underline-offset: 4px;
+}
+
+.footer__social-list {
+  display: flex;
+  flex-direction: row;
+  list-style-type: none;
+  max-width: 240px;
+  gap: 48px;
+}
