--- a/styles/style.css
+++ b/styles/style.css
@@ -1,34 +1,29 @@
-.body {
-  background-color: #fff;
-  font-family: 'Raleway', 'Verdana', sans-serif;
-}
-
 .header {
   display: grid;
   grid-template-columns: 1fr auto 1fr;
   grid-template-rows: 1fr;
-  padding: 92px 49px 92px 51px;
-  max-width: 1440px;
   width: 100%;
+  max-width: 1440px;
   margin: auto;
+  padding: 92px 49px 92px 51px;
 }
 
 .header__links-list {
-  color: #000;
-  font-size: 18px;
-  font-weight: 400;
-  line-height: normal;
   display: flex;
   flex-direction: row;
-  gap: 32px;
   grid-column: 1/2;
+  gap: 32px;
   padding-top: 43px;
   padding-bottom: 45px;
+  color: #000;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: normal;
 }
 
 .header__links-list-item {
-  list-style-type: circle;
   color: #000;
+  list-style-type: circle;
   white-space: nowrap;
 }
 
@@ -45,73 +40,71 @@
 }
 
 .header__logo {
-  grid-column: 2/3;
   display: block;
+  grid-column: 2/3;
   width: 148px;
   height: 105px;
 }
 
 .header__logo-image {
-  height: 100%;
   width: 100%;
+  height: 100%;
 }
 
 .address {
   max-width: 240px;
   color: #000;
+  font-weight: 400;
   font-size: 18px;
   font-style: normal;
-  font-weight: 400;
   line-height: 1.35;
 }
 
 .header__address {
   grid-column: 3/4;
-  align-self: center;
   justify-self: end;
+  align-self: center;
 }
 
-.header__address-tel,
-.header__address-mail {
+.address__link {
   text-underline-offset: 4px;
 }
 
 .content {
-  max-width: 1440px;
   width: 100%;
+  max-width: 1440px;
   margin: auto;
 }
 
 .cover {
   position: relative;
-  background: url(../images/cover.jpg) 100% 100% no-repeat;
-  background-size: cover;
+  z-index: 0;
   padding: 165px 50px 50px;
-  z-index: -2;
+  background: url(../images/cover.jpg) center center/cover no-repeat;
 }
 
 .overlay {
   position: absolute;
-  background-color: rgba(0, 0, 0, 0.5);
   top: 0;
   left: 0;
+  z-index: -1;
   width: 100%;
   height: 100%;
-  z-index: -1;
+  background-color: rgba(0, 0, 0, 0.6);
 }
 
 .cover__title {
   color: #fff;
-  font-size: 100px;
   font-weight: 700;
+  font-size: 100px;
   text-transform: uppercase;
 }
 
 .aligned-text {
   display: block;
+  margin-bottom: 20px;
   line-height: 1.15;
   letter-spacing: 30px;
-  margin-bottom: 20px;
 }
 
 .aligned-text .letter-spacing-extended {
@@ -124,10 +117,10 @@
 
 .aligned-text_center {
   display: block;
-  text-align: center;
+  margin-bottom: 20px;
   line-height: 1;
   letter-spacing: 30px;
-  margin-bottom: 20px;
+  text-align: center;
 }
 
 .aligned-text_center .letter-spacing-extended {
@@ -140,10 +133,10 @@
 
 .aligned-text_right {
   display: block;
-  text-align: right;
+  margin-bottom: 135px;
   line-height: 1;
   letter-spacing: 30px;
-  margin-bottom: 135px;
+  text-align: right;
 }
 
 .aligned-text_right .letter-spacing-extended {
@@ -161,17 +154,17 @@
   align-items: center;
   gap: 78px;
   color: #fff;
-  font-size: 22px;
   font-weight: 400;
+  font-size: 22px;
   line-height: 28px;
   text-transform: uppercase;
 }
 
 .cover__description-text {
-  word-spacing: 24px;
   color: #fff;
-  font-size: 22px;
   font-weight: 400;
+  font-size: 22px;
+  word-spacing: 24px;
 }
 
 .cover__description-text .word-spacing-extended {
@@ -179,34 +172,34 @@
 }
 
 .bet-button {
-  padding: 12px 32px;
-  background-color: transparent;
   border: 1px solid #fff;
+  padding: 12px 32px;
   color: #fff;
   font-family: Raleway;
+  font-weight: 400;
   font-size: 22px;
   font-style: normal;
-  font-weight: 400;
   line-height: normal;
-  text-transform: uppercase;
   text-decoration: none;
+  text-transform: uppercase;
+  background-color: transparent;
   white-space: nowrap;
 }
 
 .lots {
-  padding: 180px 50px;
   display: flex;
   flex-direction: column;
+  padding: 180px 50px;
 }
 
 .lots__heading {
   display: flex;
+  margin: auto auto 27px 40px;
   color: #000;
-  font-size: 40px;
   font-weight: 700;
+  font-size: 40px;
   line-height: normal;
   text-transform: uppercase;
-  margin: auto auto 27px 40px;
 }
 
 .lots__card-list {
@@ -214,80 +207,63 @@
   flex-wrap: wrap;
   flex-grow: 1;
   gap: 25px;
-  list-style-type: none;
   margin-bottom: 30px;
+  list-style-type: none;
+}
+
+.lots__card-list-item {
+  display: flex;
+  flex-grow: 1;
+  flex-basis: 430px;
+  min-height: 450px;
 }
 
 .card {
-  flex-basis: 430px;
-  min-height: 450px;
-  flex-grow: 1;
+  position: relative;
+  z-index: 0;
   display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   width: 100%;
+  height: 100%;
+  padding: 50px 40px;
+  background: center center/cover no-repeat;
 }
 
 .card-link {
-  text-decoration: none;
   display: block;
   width: 100%;
+  text-decoration: none;
 }
 
 .card_type_film {
-  position: relative;
-  background: url(../images/card-lot-01.jpg) 100% 100% no-repeat;
-  background-size: cover;
-  z-index: -2;
-  height: 100%;
-  width: 100%;
+  background-image: url(../images/card-lot-01.jpg);
 }
 
 .card_type_film .card__title {
   color: #fff;
-  font-size: 22px;
   font-weight: 700;
+  font-size: 22px;
   line-height: 1.2;
   text-decoration-line: underline;
   text-transform: uppercase;
 }
 
-.card_type_film .card__content {
-  padding: 50px 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-  width: 100%;
-}
-
 .card_type_film .card__text {
   color: #fff;
-  font-size: 20px;
   font-weight: 400;
+  font-size: 20px;
   line-height: 1.2;
 }
 
 .card_type_book {
-  position: relative;
-  background: url(../images/card-lot-02.jpg) 100% 100% no-repeat;
-  background-size: cover;
-  z-index: -2;
-  height: 100%;
-  width: 100%;
-}
-
-.card_type_book .card__content {
-  padding: 50px 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-  width: 100%;
+  background-image: url(../images/card-lot-02.jpg);
 }
 
 .card_type_book .card__title {
   color: #fff;
-  font-size: 22px;
   font-weight: 700;
+  font-size: 22px;
   line-height: 1.2;
   text-decoration-line: underline;
   text-transform: uppercase;
@@ -295,33 +271,19 @@
 
 .card_type_book .card__text {
   color: #fff;
-  font-size: 20px;
   font-weight: 400;
+  font-size: 20px;
   line-height: 1.2;
 }
 
 .card_type_picture {
-  position: relative;
-  background: url(../images/card-lot-03.jpg) 100% 100% no-repeat;
-  background-size: cover;
-  z-index: -2;
-  height: 100%;
-  width: 100%;
-}
-
-.card_type_picture .card__content {
-  padding: 50px 40px;
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-  width: 100%;
+  background-image: url(../images/card-lot-03.jpg);
 }
 
 .card_type_picture .card__title {
   color: #fff;
-  font-size: 22px;
   font-weight: 700;
+  font-size: 22px;
   line-height: 1.2;
   text-decoration-line: underline;
   text-transform: uppercase;
@@ -329,44 +291,44 @@
 
 .card_type_picture .card__text {
   color: #fff;
-  font-size: 20px;
   font-weight: 400;
+  font-size: 20px;
   line-height: 1.2;
 }
 
 .lots__look-more-link {
+  margin: auto auto 2px 40px;
   color: #000;
-  font-size: 20px;
   font-weight: 400;
+  font-size: 20px;
   line-height: normal;
   text-decoration: underline;
   text-underline-offset: 5px;
-  margin: auto auto 2px 40px;
 }
 
 .about {
-  padding: 0 50px 180px;
   display: grid;
   grid-template-columns: 430px 1fr;
   grid-template-rows: 1fr;
   gap: 25px;
+  padding: 0 50px 180px;
 }
 
 .about__column-logo {
   display: flex;
-  align-items: start;
   justify-content: center;
+  align-items: start;
 }
 
 .about__logo {
   display: flex;
-  background-color: #000;
+  justify-content: center;
+  align-items: center;
   width: 240px;
   height: 240px;
   border: 1px solid #000;
   border-radius: 50%;
-  justify-content: center;
-  align-items: center;
+  background-color: #000;
 }
 
 .about__logo-image {
@@ -375,16 +337,16 @@
 }
 
 .about__column-text {
-  padding-top: 100px;
   display: flex;
   flex-direction: column;
   gap: 100px;
+  padding-top: 100px;
 }
 
 .about__title {
   color: #000;
-  font-size: 40px;
   font-weight: 700;
+  font-size: 40px;
   line-height: normal;
   text-transform: uppercase;
 }
@@ -394,31 +356,26 @@
   flex-direction: column;
   gap: 25px;
   color: #000;
-  font-size: 20px;
   font-weight: 400;
+  font-size: 20px;
   line-height: normal;
 }
 
 .footer {
-  padding: 0px 50px 90px;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  max-width: 1440px;
   width: 100%;
+  max-width: 1440px;
   margin: auto;
-}
-
-.footer__address-tel,
-.footer__address-mail {
-  text-underline-offset: 4px;
+  padding: 0px 50px 90px;
 }
 
 .footer__menu-list {
-  list-style-type: none;
   display: flex;
   flex-direction: column;
   align-items: center;
+  list-style-type: none;
 }
 
 .footer__menu-link_active {
@@ -427,8 +384,8 @@
 
 .footer__menu-link {
   color: #000;
-  font-size: 18px;
   font-weight: 400;
+  font-size: 18px;
   line-height: normal;
   text-underline-offset: 4px;
 }
@@ -436,7 +393,7 @@
 .footer__social-list {
   display: flex;
   flex-direction: row;
-  list-style-type: none;
-  max-width: 240px;
   gap: 48px;
+  max-width: 240px;
+  list-style-type: none;
 }
