--- a/styles/global.css
+++ b/styles/global.css
@@ -30,13 +30,9 @@ a {
   color: inherit;
 }
 
-a:visited {
-  color: #6f206f;
-}
-
-a:hover {
-  color: #2a1c7a;
-}
+a:hover { 
+color: rgba(0, 0, 0, 0.6); 
+} 
 
 img {
   width: 100%;
